                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 3.1.2
  *) [TS-1038] SHttpTxnErrorBodySet() can leak memory.
   Author: Brian Geffon

  *) [TS-1049] TS hangs (dead lock) on HTTPS POST requests.
   Author: Wilson Ho

  *) [TS-1056] Lost UA connections can show up as "400 ERR_INVALID_REQ"
   in logs.

  *) [TS-1048] Add TS API to enable plugins to use traffic server
   configuration infrastructure. Author: Bianca Cooper.

  *) [TS-1074] PluginVC should schedule to the local queue instead of the
  external queue. Author: Brian Geffon

  *) [TS-1032] Assertion when upstream connection is established (with event
   handled by thread A) and immediately disconnected (handled by thread B).
   Author: Uri Shachar.

  *) [TS-1052] trafficserver restart does not work (needs to let the old
   process die). Author: Billy Viera

  *) [TS-1044] Fix TSVConn{Read,Write}VIOGet in UnixNetVConnection.
    Author: James Peach.

  *) [TS-1040] Teach TSHostLookup to use const. Author: James Peach.

  *) [TS-1071] Debug statement in FetchSM broken. Author: Brian Geffon.

  *) [TS-1057] Expose Base64-encoding through APIs.
   Author: Yakov Kopel and leif

  *) [TS-1014] slow log can not print logs well on 32-bit system,
  changed the %d to RPI64. Author: weijin.

  *) [TS-992] Various portability fixes. Author: Piotr Sikora

  *) [TS-999] Deprecate TSUrlDestroy(), it's a no-op. Just make sure
   to release the marshal buffers as normal.

  *) [TS-245] Add TSStringPercentEncode(), TSUrlPercentEncode(), and
   TSStringPercentDecode().

  *) [TS-1065] traffic_cop segment fault when enable TRACE_LOG_COP.
   Author: Conan Wang.

  *) [TS-1029] DNS crash if we free the memory into system. Author: weijin

  *) [TS-1055] Wrong implementation of TSHttpSsnArgGet().
   Author: Yakov Kopel

  *) [TS-992] Portability fixes. Author: Piotr Sikora.

  *) [TS-949] Fix key->vol hash to be consistent when a disk is marked bad.
